--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,15 @@
-<head>
+<head lang="en">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     {% include styles.html %}
 
     {% seo %}
 
     {% include meta.html %}
+
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 </head>
