--- a/css/main.scss
+++ b/css/main.scss
@@ -14,21 +14,38 @@ $grey-color-dark:  darken($grey-color, 25%);
         "layout"
 ;
 
-
-.nav-item-current {
-        display: inline-block;
-        padding: 1rem;
-        font-style: italic;
-}
-
-.nav-item-current :hover {
-        // display: inline-block;
-        text-decoration: underline;
+.nav-item {
+        display: block;
+        padding: 0px;
+        margin: 0px;
 }
 
 .nav-item :hover {
         // display: inline-block;
         text-decoration: underline;
+}
+
+.nav-item-current {
+        display: block;
+        padding: 0px;
+        margin: 0px;
+        font-weight: bold;
+}
+
+.nav-item:hover, .nav-item:focus, .nav-item:active, .nav-item-current:hover, .nav-item-current:focus, .nav-item-current:active  {
+        text-decoration: underline;
+}
+
+@media (min-width: 350px) {
+.nav-item-current {
+        display: inline-block;
+        padding: 1rem;
+        font-weight: bold;
+      }
+.nav-item {
+        display: inline-block;
+        padding: 1rem;
+}
 }
 
 .breadcrumbs {
@@ -61,3 +78,4 @@ $grey-color-dark:  darken($grey-color, 25%);
         width: 100%;
         height: 100%;
     }
+
